[package]
name = "smf"
description = "APIs to access the Service Managment Facility"
version = "0.1.0"
authors = ["Sean Klein <sean@oxide.computer>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
