[package]
name = "smf"
version = "0.2.1"
authors = ["Sean Klein <sean@oxide.computer>"]
edition = "2018"
repository = "https://github.com/oxidecomputer/smf"
description = "Rust bindings for the illumos SMF system"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
